--- a/style.css
+++ b/style.css
@@ -167,6 +167,7 @@ footer {
     text-decoration: none;
     color: #9b2226;
     height: 150px;
+    transition: all 0.3s ease;
    
 }
 .grid-container a:hover {
@@ -186,19 +187,63 @@ footer a img {
     height: 100px;
     padding: 10px;
 }
+footer a img:hover {
+    animation: rollin 1s ease-in;
+}
+@keyframes rollin {
+    0% {
+        
+    }
+    10% {
+        transform: rotate(0.1turn);
+    }
+    15% {
+        transform: rotate(0.15turn);
+    }
+    25% {
+        transform: rotate(0.25turn);
+    }
+    35% {
+        transform: rotate(0.35turn);
+    }
+    45% {
+        transform: rotate(0.45turn);
+    }
+    50% {
+        transform: rotate(0.5turn);
+    }
+    65% {
+        transform: rotate(0.65turn);
+    }
+    75% {
+        transform: rotate(0.75turn);
+    }
+    85% {
+        transform: rotate(0.85turn);
+    }
+    100% {
+        transform: rotate(1turn);
+        visibility: visible;
+    }
+}
 form {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-top: 10px;
 }
-form textarea, input {
+textarea, input {
     background-color: #94d2bd;
     border-radius: 5px;
     margin: 5px;
     border: 1px solid whitesmoke;
     width: 33%;
 }
+textarea:focus, input:focus {
+    background-color: whitesmoke;
+    border: 3px dotted #9b2226;
+}
+
 form button {
     color: whitesmoke;
     width: 33.33%;
